# workbench

./: .envrc  .gitignore  .golangci.yml  .k3d.yaml  README.md  Taskfile.yml  Tiltfile  devenv.nix  flake.nix  pyproject.toml
api/: Tiltfile  pyproject.toml
api/deploy/helm/: Chart.yaml  values.yaml
api/deploy/helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  serviceaccount.yaml
api/src/: app.py  config.py  models.py  store.py
deploy/: Chart.yaml  redis-values.yaml  values.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  serviceaccount.yaml
deploy/templates/api/: deployment.yaml  hpa.yaml  service.yaml
deploy/templates/product-store/: deployment.yaml  hpa.yaml  service.yaml
deploy/templates/tests/: test-api-connection.yaml
deploy/tilt/: Chart.yaml
deploy/tilt/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  serviceaccount.yaml
msgs/: Tiltfile  pyproject.toml
msgs/deploy/helm/: Chart.yaml
msgs/src/: app.py  logger.py  store.py  test_app.py
product-store/: .mockery.yml  Tiltfile  go.mod  go.sum  http.go  main.go  models.go
product-store/deploy/helm/: Chart.yaml
product-store/openapi/: api-client.config.yaml  api.config.yaml  api.spec.yaml  types.config.yaml  types.spec.yaml
product-store/pkg/api/: gen.go  handler.go  models.go  routes.go
product-store/pkg/client/: gen.go
product-store/pkg/db/: db.go  errors.go
product-store/pkg/ptr/: ptr.go
product-store/pkg/store/: store.go
product-store/pkg/types/: gen.go  types.go
product-store/pkg/xredis/: client.go  cmd.go  errors.go  (+6 more)
python-api/: pyproject.toml
(+26 files in other folders)
