[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "loguru>=0.7.3",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "redis>=5.2.1",
    "pydantic>=2.10.2",
    "xxhash>=3.5.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]
